--- a/.github/workflows/vercel_deploy.yaml
+++ b/.github/workflows/vercel_deploy.yaml
@@ -24,4 +24,4 @@ jobs:
         run: npm install -g vercel
 
       - name: Deploy to Vercel
-        run: vercel --token=${{ secrets.VERCEL_TOKEN }} --project=profesite --prod --confirm
+        run: vercel --token=${{ secrets.VERCEL_TOKEN }} --prod --confirm
