--- a/.github/workflows/vercel_deploy.yaml
+++ b/.github/workflows/vercel_deploy.yaml
@@ -12,14 +12,14 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout respository
+      - name: Checkout repository
         uses: actions/checkout@v3
       
       - name: Install dependencies
-        uses: npm install
+        run: npm install
 
       - name: Build project
-        uses: npm run build
+        run: npm run build
 
   # After build is sucessful, deploy to Vercel
   deploy:
