--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -15,15 +15,34 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
       
+      - name: Cache node_modules
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.npm
+            node_modules
+          key: ${{ runner.os }}-node-modules-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-modules-
+      
       - name: Install dependencies
         run: npm install
 
+      - name: Cache Next.js build
+        uses: actions/cache@v3
+        with:
+          path: .next
+          key: ${{ runner.os }}-next-build-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-next-build-
+      
       - name: Build project
         run: npm run build
   
   # After build is successful, run tests on code
   test:
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
