--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -15,27 +15,19 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
       
-      - name: Cache node_modules
-        uses: actions/cache@v3
+      - name: Cache npm and Next.js build cache
+        uses: actions/cache@v4
         with:
           path: |
             ~/.npm
-            node_modules
-          key: ${{ runner.os }}-node-modules-${{ hashFiles('**/package-lock.json') }}
+            ${{ github.workspace }}/.next/cache
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**/*.js', '**/*.jsx', '**/*.ts', '**/*.tsx') }}
           restore-keys: |
-            ${{ runner.os }}-node-modules-
+            ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-
       
       - name: Install dependencies
         run: npm install
 
-      - name: Cache Next.js build
-        uses: actions/cache@v3
-        with:
-          path: .next
-          key: ${{ runner.os }}-next-build-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-next-build-
-      
       - name: Build project
         run: npm run build
   
