--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -14,6 +14,7 @@ jobs:
       
       - name: Cache npm and Next.js build cache
         uses: actions/cache@v4
+        id: cache
         with:
           path: |
             ~/.npm
@@ -23,7 +24,10 @@ jobs:
             main-build-cache-${{ hashFiles('**/package-lock.json') }}-
       
       - name: Install dependencies
-        run: npm install
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: |
+          echo "installing dependencies for build"
+          npm install
 
       - name: Build project
         run: npm run build
@@ -35,9 +39,23 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-      
-      # - name: Install dependencies
-      #   run: npm install
+
+      - name: Cache npm and Next.js build cache
+        uses: actions/cache@v4
+        id: cache
+        with:
+          path: |
+            ~/.npm
+            ${{ github.workspace }}/.next/cache
+          key: main-build-cache-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**/*.js', '**/*.jsx', '**/*.ts', '**/*.tsx') }}
+          restore-keys: |
+            main-build-cache-${{ hashFiles('**/package-lock.json') }}-
+
+      - name: Install dependencies
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: |
+          echo "installing dependencies for test"
+          npm install
 
       - name: Run tests
         run: npm run test
