--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -8,8 +8,8 @@ on:
     branches:
       - main
 
-concurrency: 
-  group: ${{ github.head_ref }}
+concurrency:
+  group: pr-${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
 
 jobs:  
