--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
-    "lucide-react": "^0.474.0",
     "firebase": "^11.2.0",
+    "firebase-admin": "^13.1.0",
+    "lucide-react": "^0.474.0",
     "next": "15.1.6",
     "re-resizable": "^6.10.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-rnd": "^10.4.14",
-    "react-firebase-hooks": "^5.1.1"
+    "react-firebase-hooks": "^5.1.1",
+    "react-rnd": "^10.4.14"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
