--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
       "@components/*": ["./src/components/*"],
       "@utils/*": ["./src/utils/*"],
       "@customTypes/*": ["./src/customTypes/*"],
-      "@firebase/*": ["./src/lib/firebase/*"],
+      "@lib/firebase/*": ["./src/lib/firebase/*"],
       "@css/*": ["./src/css/*"],
       "@public/*": ["./public/*"]
     }
