--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
+    "@headlessui/react": "^2.2.0",
     "firebase": "^11.2.0",
     "firebase-admin": "^13.1.0",
     "lucide-react": "^0.474.0",
