--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "lint": "next lint",
     "test": "jest",
     "prepare": "husky",
-    "format" : "npx prettier src/ --write"
+    "format": "npx prettier src/ --write"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
     "@headlessui/react": "^2.2.0",
+    "@lexical/react": "^0.29.0",
     "firebase": "^11.2.0",
     "firebase-admin": "^13.1.0",
+    "lexical": "^0.29.0",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
     "re-resizable": "^6.10.3",
