--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
     "target": "ES2017",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -19,16 +23,40 @@
       }
     ],
     "paths": {
-      "@components/*": ["./src/components/*"],
-      "@utils/*": ["./src/utils/*"],
-      "@customTypes/*": ["./src/customTypes/*"],
-      "@lib/firebase/*": ["./src/lib/firebase/*"],
-      "@lib/hooks/*": ["./src/lib/hooks/*"],
-      "@lib/requests/*": ["./src/lib/requests/*"],
-      "@public/*": ["./public/*"],
-      "@contexts/*": ["./src/contexts/*"],
+      "@components/*": [
+        "./src/components/*"
+      ],
+      "@utils/*": [
+        "./src/utils/*"
+      ],
+      "@customTypes/*": [
+        "./src/customTypes/*"
+      ],
+      "@lib/firebase/*": [
+        "./src/lib/firebase/*"
+      ],
+      "@lib/hooks/*": [
+        "./src/lib/hooks/*"
+      ],
+      "@lib/requests/*": [
+        "./src/lib/requests/*"
+      ],
+      "@public/*": [
+        "./public/*"
+      ],
+      "@contexts/*": [
+        "./src/contexts/*"
+      ]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "vitest.config.mts"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
