--- a/tsconfig.vitest.json
+++ b/tsconfig.vitest.json
@@ -2,7 +2,7 @@
     "extends": "./tsconfig.json",
     "compilerOptions": {
       "jsx": "react-jsx",
-      "types": ["vitest/globals", "@testing-library/jest-dom"]
+      "types": ["vitest/globals", "@testing-library/jest-dom", "vitest"]
     },
     "include": ["**/*.test.ts", "**/*.test.tsx", "**/__tests__/**/*"]
   }
