test(visual_home): added playwright test to homepage

--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -37,6 +37,9 @@ jobs:
       - name: Run tests
         run: npm run test
       
+      - name: Run playwright
+        run: npm run test:playwright
+      
       - name: Run formatter
         run: npm run format
 
