--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -15,6 +15,8 @@ concurrency:
 jobs:  
   test:
     runs-on: ubuntu-latest
+    env:
+      FIREBASE_SERVICE_ACCOUNT_KEY: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_KEY }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
