added npx playwright install to testing.yaml

--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -46,6 +46,7 @@ jobs:
         run: | 
           npm install @playwright/test
           npm install dotenv
+          npx playwright install 
       
       - name: Run playwright
         run: npm run test:playwright
