--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -51,6 +51,14 @@ jobs:
       - name: Run playwright
         run: npm run test:playwright
         continue-on-error: true
+
+      - name: Upload Playwright screenshots
+        uses: actions/upload-artifact@v3
+        with:
+          name: playwright-screenshots
+          path: |
+            test-results/homeVisual-homepage-test/*.png
+            __tests__/playwright/homeVisual.spec.tsx-snapshots/*.png
       
       - name: Run formatter
         run: npm run format
