--- a/.github/workflows/vercel_deploy.yaml
+++ b/.github/workflows/vercel_deploy.yaml
@@ -52,6 +52,12 @@ jobs:
       - name: Install Vercel CLI
         run: npm install -g vercel
 
+      - name: Install Playwright Browsers
+        run: | 
+          npm install @playwright/test
+          npm install dotenv
+          npx playwright install
+
       - name: Deploy to Vercel
         run: |
           echo "deploying to Vercel..."
