--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -43,10 +43,7 @@ jobs:
         run: npm run test
       
       - name: Install Playwright Browsers
-        run: | 
-          npm install @playwright/test
-          npm install dotenv
-          npx playwright install
+        run: npx playwright install
       
       - name: Run playwright
         run: npm run test:playwright
