--- a/.github/workflows/vercel_deploy.yaml
+++ b/.github/workflows/vercel_deploy.yaml
@@ -27,6 +27,9 @@ jobs:
         run: |
           npm ci
 
+      - name: Install Playwright Browsers
+        run: npx playwright install
+
       - name: Build project
         run: npm run build
         env:
@@ -45,6 +48,9 @@ jobs:
 
       - name: Install Vercel CLI
         run: npm install -g vercel
+
+      - name: Install Playwright Browsers
+        run: npx playwright install
 
       - name: Deploy to Vercel
         run: |
