--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@lexical/react": "^0.29.0",
     "firebase": "^11.2.0",
     "firebase-admin": "^13.1.0",
+    "heic-to": "^1.1.13",
     "lexical": "^0.29.0",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
